# subsquid-dao

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Makefile.toml  README.md  build_contract_with_docker.sh  docker-compose.yml
contracts/delegation/: Cargo.toml  Makefile.toml  lib.rs
contracts/delegation_proxy/: Cargo.toml  lib.rs
contracts/dispute/: Cargo.toml  lib.rs
contracts/dispute_proxy/: Cargo.toml  lib.rs
contracts/epoch/: Cargo.toml  README.md  lib.rs
contracts/epoch_proxy/: Cargo.toml  lib.rs
contracts/indexer/: Cargo.toml  README.md  lib.rs
contracts/indexer_meta/: Cargo.toml  lib.rs
contracts/indexer_meta_proxy/: Cargo.toml  lib.rs
contracts/registry/: Cargo.toml  Makefile.toml  lib.rs
contracts/registry_proxy/: Cargo.toml  lib.rs
contracts/subscription/: Cargo.toml  lib.rs
contracts/subscription_proxy/: Cargo.toml  lib.rs
docker/contract/: Dockerfile
docker/node/: Dockerfile
docs/: delegate_workflow.md  dispute_workflow.md  register_metadata_workflow.md  register_name_workflow.md  subscribe_workflow.md
nodejs_cli/: package.json  tsconfig.json
nodejs_cli/src/: app.ts
